模型代码修改